fixed overflow last section

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -275,6 +275,7 @@ h2 * {
             }
             .bg-5, .bg-10 {
                 z-index: 1;
+                overflow: hidden;
             }
         }
     }
